--- a/presentation/index.html
+++ b/presentation/index.html
@@ -66,10 +66,9 @@
                 <section>
                     <h2>Overview</h2>
                     <ul>
-                        <li>Background</li>
-                        <li>Why learn Javascript (JS)?</li>
+                        <li>Background and Why learn JS ?</li>
                         <li>Web Development</li>
-                        <li>What is JS ?</li>
+                        <li>What is JS (Code Examples)?</li>
                         <li>jQuery</li>
                     </ul>
                     <p style="height:200px">&nbsp;</p>
@@ -87,18 +86,16 @@
                 </section>
 
                 <section>
-                    <h2>Why ?</h2>
-                    <p class="fragment">THE Scripting language of the web</p>
-                    <p style="height:200px">&nbsp;</p>
-	            </section>
-
-                <section>
                     <img style="float:left" src="img/flash.jpeg" height="300px">
                     <img style="float:right;top:100px" src="img/silverlight.jpeg" height="300px">
                     <img src="img/google.jpg" height="400px" style="clear:both;" class="fragment">
                     <p style="height:200px">&nbsp;</p>
                 </section>
 
+                <section>
+                    <img style="float:left" src="img/jsUsage.png" height="300px">
+                    <p style="height:200px">&nbsp;</p>
+                </section>
 
                 <section>
                     <section>
@@ -109,6 +106,17 @@
                         <img src="img/githublist_red.png" height="1000px">
                     </section>
                 </section>
+
+                <section>
+                    <p>THE Scripting language of the web</p>
+                    <p style="height:200px">&nbsp;</p>
+                </section>
+
+                <section>
+                    <p>Grow as a Developer</p>
+                    <p style="height:200px">&nbsp;</p>
+                </section>
+
 
 				<section>
 					<h2>Web development</h2>
@@ -129,11 +137,7 @@
                 <section>
                     <section>
                         <h2 class="">What happens when a page is loaded?</h2>
-                        <ul class="fragment">
-                            <li>HTML is downloaded</li>
-                            <li>Stylesheets and JavaScripts are downloaded</li>
-                            <li>JS interpreted immediately</li>
-                        </ul>
+                        <img src="img/html-css-javascript.png" height="400px">
                         <p style="height:200px">&nbsp;</p>
                     </section>
 
@@ -149,9 +153,20 @@
 				<section>
 					<section id="events">
 						<h2>Event driven programming - listeners</h2>
-						<pre class="fragment"><code contenteditable>$('.mySelector').on('click', function(event) {
-  // React to the click
-});</code></pre>
+						<pre class="fragment"><code>&lthtml&gt
+    &ltbody&gt
+
+        &ltbutton class='mySelector'/&gt
+
+        &ltscript type='text/javascript'&gt
+
+            $('.mySelector').on('click', function(event) {
+            // React to the click
+            });
+
+        &lt/script&gt
+    &lt/body&gt
+&lt/html&gt                            </code></pre>
 						<ul class="fragment">
 							<li style="">"click"</li>
 							<li style="">"submit"</li>
@@ -190,39 +205,17 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 				</section>
 
                 <section>
-                    <h2>Javascript is</h2>
+                    <h2>What is Javascript ?</h2>
                     <ul>
-                        <li>A scripting language</li>
-                        <li>Weakly typed</li>
-                        <li>Object Oriented</li>
+                        <li>Basic Syntax</li>
+                        <li>Functions Are Objects</li>
+                        <li>A Weakly typed scripting language</li>
                         <li>Non-blocking</li>
                     </ul>
                 </section>
+
                 <section>
-                    <p>JS is a scripting language</p>
-                </section>
-
-                <section class="codeblock">
-<pre ><code contenteditable>var mystring = "hej";
-log(mystring);
-</code></pre>
-                    <button class="btn btn-large eval">Submit</button>
-                    <p class="output"></p>
-                </section>
-
-				<section>
-                    <h2>Basic Syntax</h2>
-
-					<ul>
-						<li>Data Types:</li>
-						<ul>
-							<li>Strings</li>
-							<li>Numbers</li>
-							<li>Booleans</li>
-							<li>Arrays</li>
-							<li>HashMaps (Object)</li>
-						</ul>
-					</ul>
+                    <p>Basic Syntax</p>
                 </section>
 
 
@@ -233,12 +226,13 @@ var myInt = 0;
 var myFloat = 0.1;
 var myBool = true;
 var myArray = ["stringElement", 1];
-var myMap = {name : "Anders", age: 28};
-log(myMap.name); //Outputs 'Anders'
-log(myMap.age); //Outputs '28'
+var myDict = {name : "Anders", age: 28};
+
+log(myDict.name); //Outputs 'Anders'
+log(myDict.age); //Outputs '28'
 </code></pre>
-                <button class="btn btn-large eval">Submit</button>
-                <p class="output"></p>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
                 </section>
 
                 <section>
@@ -247,25 +241,28 @@ log(myMap.age); //Outputs '28'
 
                 <section class="codeblock">
 <pre ><code contenteditable>var addTwoNumbers = function(a,b) {
-return a+b;
-};
+    return a+b;
+    };
 log(addTwoNumbers(1,2));
-</code></pre>
-                <button class="btn btn-large eval">Submit</button>
-                <p class="output"></p>
-                </section>
-
-
-                <section>
-                    <p>JS is weakly typed</p>
-                </section>
-
-                <section class="codeblock">
-<pre ><code contenteditable>log("hej");
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
                 </section>
+
+                <section>
+                    <p>A weakly typed scripting language</p>
+                </section>
+
+                <section class="codeblock">
+<pre ><code contenteditable>var mystring = "hej";
+log(mystring);
+</code></pre>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
+                </section>
+
+
+
 
                 <section>
                     <p>Equality Operators (==)</p>
@@ -304,33 +301,23 @@ log(' \t\r\n ' == 0)     // true
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
-
-                <section>
-                    <p>Javascript is Object Oriented</p>
-                </section>
-
-                <section class="codeblock">
-<pre ><code contenteditable>var myobject = function() {
-  this.value = 5;
-};
-var o = new myobject();
-log(o.value)
-</code></pre>
-                    <button class="btn btn-large eval">Submit</button>
-                    <p class="output"></p>
-                </section>
-
                 <section>
                     <p>Javascript is Non - blocking</p>
                 </section>
 
                 <section class="codeblock">
-<pre ><code contenteditable>var myArray = [0,1,2];
-myArray.forEach(function(item) {
-  setTimeout(function() {
-    log(item);
-  }, Math.random() * 11 * 50);
+<pre ><code contenteditable>var slowRequest = function(func) { //Simulating a 3s low request
+setTimeout(function() {
+func(true);
+}, 3000);
+}
+
+slowRequest(function(res) {
+
+    log("Responded with " + res);
+
 });
+
 log("Done");
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
@@ -391,6 +378,21 @@ log("Done");
 					<h2>Thank you!</h2>
 					<p style="height:200px">&nbsp;</p>
 				</section>
+
+                <section>
+                    <p>Javascript is Object Oriented</p>
+                </section>
+
+                <section class="codeblock">
+<pre ><code contenteditable>var myobject = function() {
+    this.value = 5;
+    };
+    var o = new myobject();
+    log(o.value)
+</code></pre>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
+                </section>
 
 			</div>
 
