--- a/presentation/index.html
+++ b/presentation/index.html
@@ -60,7 +60,7 @@
 
 				<section>
 					<h1>Expectations</h1>
-					<p style="height:200px">&nbsp;</p>
+					<p style="height:400px">&nbsp;</p>
 				</section>
 
                 <section>
@@ -72,33 +72,32 @@
                         <li>What is JS ?</li>
                         <li>jQuery</li>
                     </ul>
-                    <p style="height:200px">&nbsp;</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section>
                     <p>"Javascript .. det är väl ungefär som Java"</p>
-                    <p style="height:200px">&nbsp;</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section>
                     <p class="fragment">"This is to weird looking, make the syntax look more like Java"</p>
                     <img src="img/netscape_navgator.jpg">
-                    <p style="height:200px">&nbsp;</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
-
-                <section>
-                    <h2>Why ?</h2>
-                    <p class="fragment">THE Scripting language of the web</p>
-                    <p style="height:200px">&nbsp;</p>
-	            </section>
 
                 <section>
                     <img style="float:left" src="img/flash.jpeg" height="300px">
                     <img style="float:right;top:100px" src="img/silverlight.jpeg" height="300px">
                     <img src="img/google.jpg" height="400px" style="clear:both;" class="fragment">
-                    <p style="height:200px">&nbsp;</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
+                <section>
+                    <h2>Why ?</h2>
+                    <p class="fragment">THE Scripting language of the web</p>
+                    <p style="height:400px">&nbsp;</p>
+                </section>
 
                 <section>
                     <section>
@@ -113,17 +112,20 @@
 				<section>
 					<h2>Web development</h2>
 					<ul class="fragment">
-						<li>User interaction - without new page load</li>
-                        <li>Animations</li>
+                        <li>HTML = structure</li>
+                        <li>CSS = styling</li>
+                        <li>JS = dynamics</li>
 					</ul>
-					<p style="height:200px">&nbsp;</p>
+					<p style="height:400px">&nbsp;</p>
 				</section>
 
 				<section>
 					<h2 class="">Clientside vs Serverside</h2>
 					<ul class="fragment">
+                        <li>Dynamic web pages - react without new page load</li>
+                        <li>Animations</li>
 					</ul>
-					<p style="height:200px">&nbsp;</p>
+					<p style="height:400px">&nbsp;</p>
 				</section>
 
                 <section>
@@ -131,10 +133,11 @@
                         <h2 class="">What happens when a page is loaded?</h2>
                         <ul class="fragment">
                             <li>HTML is downloaded</li>
+                            <li>Images are downloaded</li>
                             <li>Stylesheets and JavaScripts are downloaded</li>
                             <li>JS interpreted immediately</li>
                         </ul>
-                        <p style="height:200px">&nbsp;</p>
+                        <p style="height:400px">&nbsp;</p>
                     </section>
 
                     <section>
@@ -142,7 +145,10 @@
                         <ul>
                             <li>Show NET panel from browser</li>
                         </ul>
+                        <p style="height:400px">&nbsp;</p>
                     </section>
+
+
 
                 </section>
 
@@ -157,7 +163,7 @@
 							<li style="">"submit"</li>
 							<li style="">"keypress"</li>
 						</ul>
-						<p style="height:200px">&nbsp;</p>
+						<p style="height:400px">&nbsp;</p>
 					</section>
 
 					<section>
@@ -166,7 +172,7 @@
     event.preventDefault();
     // Do something
 }</code></pre>
-						<p style="height:200px">&nbsp;</p>
+						<p style="height:400px">&nbsp;</p>
 					</section>
 
 					<!--
@@ -184,7 +190,7 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 								eval($('#custom_event_code').text());
 							});
 						</script>
-						<p style="height:200px">&nbsp;</p>
+						<p style="height:400px">&nbsp;</p>
 					</section>
 					-->
 				</section>
@@ -197,9 +203,11 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
                         <li>Object Oriented</li>
                         <li>Non-blocking</li>
                     </ul>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
                 <section>
                     <p>JS is a scripting language</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section class="codeblock">
@@ -208,21 +216,21 @@ log(mystring);
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
 				<section>
                     <h2>Basic Syntax</h2>
 
+					<h3>Data Types:</h3>
 					<ul>
-						<li>Data Types:</li>
-						<ul>
-							<li>Strings</li>
-							<li>Numbers</li>
-							<li>Booleans</li>
-							<li>Arrays</li>
-							<li>HashMaps (Object)</li>
-						</ul>
+						<li>Strings</li>
+						<li>Numbers</li>
+						<li>Booleans</li>
+						<li>Arrays</li>
+						<li>HashMaps (Object)</li>
 					</ul>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
 
@@ -239,10 +247,12 @@ log(myMap.age); //Outputs '28'
 </code></pre>
                 <button class="btn btn-large eval">Submit</button>
                 <p class="output"></p>
+                <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section>
                     <p>JS Functions are objects</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section class="codeblock">
@@ -253,11 +263,13 @@ log(addTwoNumbers(1,2));
 </code></pre>
                 <button class="btn btn-large eval">Submit</button>
                 <p class="output"></p>
+                <p style="height:400px">&nbsp;</p>
                 </section>
 
 
                 <section>
                     <p>JS is weakly typed</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section class="codeblock">
@@ -265,10 +277,12 @@ log(addTwoNumbers(1,2));
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section>
                     <p>Equality Operators (==)</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section class="codeblock">
@@ -276,6 +290,7 @@ log(addTwoNumbers(1,2));
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
 				<section>
@@ -301,12 +316,13 @@ log(' \t\r\n ' == 0)     // true
 						Always use === and !== <br /><br />
 						All of the comparisons just shown <br />produce false with the === operator.
 					</p>
-					<p style="height:200px">&nbsp;</p>
+					<p style="height:400px">&nbsp;</p>
 				</section>
 
 
                 <section>
                     <p>Javascript is Object Oriented</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section class="codeblock">
@@ -318,10 +334,12 @@ log(o.value)
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section>
                     <p>Javascript is Non - blocking</p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
                 <section class="codeblock">
@@ -335,6 +353,7 @@ log("Done");
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
+                    <p style="height:400px">&nbsp;</p>
                 </section>
 
 
@@ -346,7 +365,7 @@ log("Done");
 						<li class="fragment">Document manipulation</li>
 						<li class="fragment"><h2>Plugins!</h2></li>
 					</ul>
-					<p style="height:200px">&nbsp;</p>
+					<p style="height:400px">&nbsp;</p>
 				</section>
 
 				<section id="jquery_example">
@@ -367,6 +386,7 @@ log("Done");
 								<img src="../img/mcguyver.jpg" class="image fragment">
 							</li>
 						</ul>
+                        <p style="height:400px">&nbsp;</p>
 					</section>
 
 					<section>
@@ -378,7 +398,7 @@ log("Done");
 							<li>Initiate the plugin using $('.selectorOfHtmlStructure').nameOfMyPlugin(optionsObject)</li>
 						</ol>
 
-						<p style="height:200px">&nbsp;</p>
+						<p style="height:400px">&nbsp;</p>
 					</section>
 
 					<section>
@@ -386,10 +406,25 @@ log("Done");
 						</iframe>
 					</section>
 				</section>
+                <section>
+                    <section>
+                        <h2>What time is it?</h2>
+                    </section>
+                    <!-- "Nice to have" topics are listed below -->
+                    <section>
+                        <h2 class="">Page load optimization</h2>
+                        <ul class="fragment">
+                            <li>CSS in head</li>
+                            <li>JS in end</li>
+                            <li>Bundle CSS and JS</li>
+                        </ul>
+                        <p style="height:400px">&nbsp;</p>
+                    </section>
+                </section>
 
 				<section>
 					<h2>Thank you!</h2>
-					<p style="height:200px">&nbsp;</p>
+					<p style="height:400px">&nbsp;</p>
 				</section>
 
 			</div>
