--- a/presentation/index.html
+++ b/presentation/index.html
@@ -244,7 +244,7 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 
                 <section class="codeblock">
 <pre ><code contenteditable>var mystring = "hej";
-log(mystring);
+print(mystring);
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -279,18 +279,12 @@ var myBool = true;
 var myArray = ["stringElement", 1];
 var myDict = {name : "Anders", age: 28};
 
-log(myDict.name); //Outputs 'Anders'
-log(myDict.age); //Outputs '28'
+print(myDict.name); //Outputs 'Anders'
+print(myDict.age); //Outputs '28'
 </code></pre>
-<<<<<<< HEAD
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
                     <p style="height:400px">&nbsp;</p>
-                </section>
-
-                <section>
-                    <button class="btn btn-large eval">Submit</button>
-                    <p class="output"></p>
                 </section>
 
                 <section>
@@ -302,7 +296,7 @@ log(myDict.age); //Outputs '28'
 <pre ><code contenteditable>var addTwoNumbers = function(a,b) {
     return a+b;
     };
-log(addTwoNumbers(1,2));
+print(addTwoNumbers(1,2));
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -315,7 +309,7 @@ log(addTwoNumbers(1,2));
 
                 <section class="codeblock">
 <pre ><code contenteditable>var mystring = "hej";
-log(mystring);
+print(mystring);
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -331,7 +325,7 @@ log(mystring);
                 </section>
 
                 <section class="codeblock">
-<pre ><code contenteditable>log("hej" == "hej2");
+<pre ><code contenteditable>print("hej" == "hej2");
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -340,18 +334,18 @@ log(mystring);
 
 				<section>
 					<pre><code contenteditable>
-log('' == '0')           // false
-log(0 == '')             // true
-log(0 == '0')            // true
+print('' == '0')           // false
+print(0 == '')             // true
+print(0 == '0')            // true
 
-log(false == 'false')    // false
-log(false == '0')        // true
+print(false == 'false')    // false
+print(false == '0')        // true
 
-log(false == undefined)  // false
-log(false == null)       // false
-log(null == undefined)   // true
+print(false == undefined)  // false
+print(false == null)       // false
+print(null == undefined)   // true
 
-log(' \t\r\n ' == 0)     // true
+print(' \t\r\n ' == 0)     // true
 					</code></pre>
 
                     <button class="btn btn-large eval">Submit</button>
@@ -374,7 +368,7 @@ log(' \t\r\n ' == 0)     // true
   this.value = 5;
 };
 var o = new myobject();
-log(o.value)
+print(o.value)
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -394,10 +388,10 @@ func(true);
 }
 
 slowRequest(function(res) {
-    log("Responded with " + res);
+    print("Responded with " + res);
 });
 
-log("Done");
+print("Done");
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -484,7 +478,7 @@ log("Done");
     this.value = 5;
     };
     var o = new myobject();
-    log(o.value)
+    print(o.value)
 </code></pre>
                     <button class="btn btn-large eval">Submit</button>
                     <p class="output"></p>
@@ -530,9 +524,9 @@ log("Done");
 
         <script>
             document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-            $('.eval').on('click', function(obj) {
 
-                var log = function(obj) {
+            $('.eval').on('click', function(obj) {
+                var print = function(obj) {
                     $("p.output").append("Output: " + obj + "<br />");
                 }
 
